Added Google and apple registration Connected with google and apple information need to stored in partial completion

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -47,6 +47,7 @@
       <button type="submit">Verify OTP</button>
     </form>
   <% } %>
+  <a href="/auth/google">Signup with Google</a>
   <a href="/auth/login">Login</a>
 </body>
 </html>
